<resources>
    <string name="personalization_partner_tag">com_samsung_t0</string>
    <string name="personalization_server_base_url">https://samsung-personalization.touchtype-fluency.com</string>
    <string name="personalization_server_delete_url">https://samsung-personalisation-delete.touchtype-fluency.com</string>
    <string name="touchtype_login_success_url">http://www.touchtype-online.com/login_success.html</string>
    <string name="twitter_request_token_url">https://api.twitter.com/oauth/request_token</string>
    <string name="twitter_access_token_url">https://api.twitter.com/oauth/access_token</string>
    <string name="twitter_authorize_url">https://api.twitter.com/oauth/authorize</string>
    <string name="google_auth_client_id">264543920471</string>
    <string name="google_auth_redirect_uri">http://www.swiftkey.net/login_success.html</string>
    <string name="google_auth_scope">https://mail.google.com https://www.googleapis.com/auth/userinfo.email</string>
    <string name="google_auth_access_token_url">https://accounts.google.com/o/oauth2/auth?scope=</string>
    <string name="facebook_oauth_url">https://www.facebook.com/dialog/oauth?client_id=</string>
    <string name="weibo_request_token_url">http://api.t.sina.com.cn/oauth/request_token</string>
    <string name="weibo_access_token_url">http://api.t.sina.com.cn/oauth/access_token</string>
    <string name="weibo_authorize_url">http://api.t.sina.com.cn/oauth/authorize</string>
    <string name="app_name">Samsung keyboard</string>
    <string name="deleted">%d deleted.</string>
    <string name="undo">Undo</string>
    <string name="preload_language">Cannot delete preloaded languages.</string>
    <string name="checked_language">Unable to delete language while in use. To delete, deselect tickbox.</string>
    <string name="key_label_enter_delete">Delete</string>
    <string name="key_label_enter_go">Go</string>
    <string name="key_label_enter_next">Next</string>
    <string name="key_label_enter_send">Send</string>
    <string name="key_label_enter_done">Done</string>
    <string name="input_method_type">Portrait keyboard types</string>
    <string name="foreign_language_input_method_type">Foreign keyboard</string>
    <string name="input_method_type_qwerty">Qwerty keyboard</string>
    <string name="input_method_type_phonepad">3x4 keyboard</string>
    <string name="input_method_type_box_hwr">Handwriting</string>
    <string name="input_method_type_qwerty_short">Qwerty</string>
    <string name="input_method_type_normal">Normal</string>
    <string name="use_input_method_type_on_kor">Set Korean keyboard separately</string>
    <string name="korean_keypad_type">Korean keyboard</string>
    <string name="korean_keypad_type_cji">Chunjiin keyboard</string>
    <string name="korean_keypad_type_cji_turbo">Chunjiin plus keyboard</string>
    <string name="korean_keypad_type_sky">SKY keyboard</string>
    <string name="korean_keypad_type_vega">Vega keyboard</string>
    <string name="korean_keypad_type_nara">Naratgul keyboard</string>
    <string name="korean_keypad_type_off_toast">To see advanced options, enable korean keyboard separately</string>
    <string name="number_and_symbols_keypad_type">Numbers and symbols</string>
    <string name="alphabets_keypad_type">Alphabets</string>
    <string name="keyboard_dependent_symbols_keyboard_type">Language dependent</string>
    <string name="general_settings">General settings</string>
    <string name="select_language">Input language</string>
    <string name="select_languages">Input languages</string>
    <string name="select_language_summary">To change language, slide finger on spacebar</string>
    <string name="umlaut_settings">Umlaut settings</string>
    <string name="setting_title">Samsung keyboard settings</string>
    <string name="use_xt9">Predictive text</string>
    <string name="s_fuzzy_option_title">Fuzzy settings</string>
    <string name="s_zequalzh_key">CHINESE_FUZZY_ZEQUALZH</string>
    <string name="s_cequalch_key">CHINESE_FUZZY_CEQUALCH</string>
    <string name="s_sequalsh_key">CHINESE_FUZZY_SEQUALSH</string>
    <string name="s_fequalh_key">CHINESE_FUZZY_FEQUALH</string>
    <string name="s_lequaln_key">CHINESE_FUZZY_LEQUALN</string>
    <string name="s_lequalr_key">CHINESE_FUZZY_LEQUALR</string>
    <string name="s_ianequaliang_key">CHINESE_FUZZY_IANEQUALIANG</string>
    <string name="s_uanequaluang_key">CHINESE_FUZZY_UANEQUALUANG</string>
    <string name="s_anequalang_key">CHINESE_FUZZY_ANEQUALANG</string>
    <string name="s_enequaleng_key">CHINESE_FUZZY_ENEQUALENG</string>
    <string name="s_inequaling_key">CHINESE_FUZZY_INEQUALING</string>
    <string name="s_kequalg_key">CHINESE_FUZZY_KEQUALG</string>
    <string name="s_lequalh_key">CHINESE_FUZZY_LEQUALH</string>
    <string name="s_zequalzh">z=zh</string>
    <string name="s_cequalch">c=ch</string>
    <string name="s_sequalsh">s=sh</string>
    <string name="s_fequalh">f=h</string>
    <string name="s_lequaln">l=n</string>
    <string name="s_lequalr">l=r</string>
    <string name="s_ianequaliang">ian=iang</string>
    <string name="s_uanequaluang">uan=uang</string>
    <string name="s_anequalang">an=ang</string>
    <string name="s_enequaleng">en=eng</string>
    <string name="s_inequaling">in=ing</string>
    <string name="s_kequalg">k=g</string>
    <string name="s_lequalh">l=h</string>
    <string name="use_keypad_sweeping">Keyboard swipe</string>
    <string name="keypad_sweeping_summary">Swipe keyboard horizontally to switch between letters and symbols</string>
    <string name="use_char_preview">Character preview</string>
    <string name="use_char_preview_summary">Show a big character bubble when a key on a Qwerty keyboard is tapped.</string>
    <string name="use_auto_spacing">Auto spacing</string>
    <string name="auto_spacing_summary">Automatically insert spaces between words.</string>
    <string name="use_auto_period">Auto punctuate</string>
    <string name="auto_period_summary">Automatically insert a full stop by tapping the space bar twice.</string>
    <string name="use_keypress_sound">Key-tap sound</string>
    <string name="use_keypress_haptic">Key-tap vibration</string>
    <string name="use_auto_caps">Auto capitalise</string>
    <string name="auto_caps_summary">Automatically capitalise the first letter of each sentence.</string>
    <string name="tutorial">Tutorial</string>
    <string name="reset_settings">Reset settings</string>
    <string name="help_integration">Help</string>
    <string name="use_trace">Continuous input</string>
    <string name="trace_summary">Enter text by sliding finger across keyboard. This feature is optimised for Qwerty keyboard.</string>
    <string name="cursor_Control">Cursor control</string>
    <string name="cursor_Control_summary">Slide your finger across the keyboard to move the text cursor.</string>
    <string name="flick_umlaut">Flick input</string>
    <string name="flick_umlaut_summary">Flick upwards on a key to view symbols and alternative characters.</string>
    <string name="s_pen_detection">Pen detection</string>
    <string name="s_pen_detection_summary">Show the handwriting pad when the S Pen is detected.</string>
    <string name="space_language_change">Space bar swipe</string>
    <string name="space_language_change_summary">To change the language, swipe horizontally across the space bar</string>
    <string name="reset_dialog_title">Attention</string>
    <string name="reset_dialog_msg">Keyboard settings, except the my word list and the auto substitution list, will be reset</string>
    <string name="reset_dialog_msg_xt9_ver9">Keyboard settings, except personalised data, will be reset</string>
    <string name="reset_dialog_msg_swiftkey">Keyboard settings except Personalised data and Downloaded languages will be reset.</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="advanced">Advanced</string>
    <string name="personalization_title">Personalisation</string>
    <string name="personalize_facebook_title">Learn from Facebook</string>
    <string name="personalize_gmail_title">Learn from Gmail</string>
    <string name="personalize_twitter_title">Learn from Twitter</string>
    <string name="personalize_delremote_title">Clear server data</string>
    <string name="personalize_messaging_title">Learn from Messages</string>
    <string name="personalize_contacts_title">Learn from Contacts</string>
    <string name="personalize_facebook_subtitle">Log in to Facebook to let your device learn your writing style.</string>
    <string name="personalize_gmail_subtitle">Log in to Gmail to let your device learn your writing style.</string>
    <string name="personalize_twitter_subtitle">Log in to Twitter to let your device learn your writing style.</string>
    <string name="personalize_messaging_subtitle">Update to allow your device to learn your Messages style.</string>
    <string name="personalize_contacts_subtitle">Update to allow your device to learn your Contacts style.</string>
    <string name="use_auto_correction">Auto replace</string>
    <string name="use_auto_correction_summary">Complete or replace the word you are typing with the most probable word when you tap the space bar or a punctuation mark.</string>
    <string name="use_live_language">Live word update</string>
    <string name="use_live_language_summary">Set your device to update your predictive text with popular new words every week.</string>
    <string name="use_standard_data">Personalised data</string>
    <string name="use_standard_data_summary">Set your device to use the personal language data you have entered to improve your prediction results.</string>
    <string name="personalize_delremote_subtitle">Clear unknown collected data.</string>
    <string name="privacy_preference_title">Privacy</string>
    <string name="privacy_policy_title">Privacy policy</string>
    <string name="swiftkey_privacy_url">http://www.swiftkey.net/privacy</string>
    <string name="privacy_policy">"Personalisation services are provided by a third party service provider. Service provider's Privacy Policy is applied."</string>
    <string name="pref_delete_dynamic_title">Clear personalised data</string>
    <string name="pref_delete_dynamic_summary">Clear all personalised language data collected to learn your writing style.</string>
    <string name="pref_delete_dynamic_dialog_title">If you continue, you will lose everything that Samsung keyboard has learnt about your writing style, including any new words you have used. Continue?</string>
    <string name="pref_delete_dynamic_dialog_cancel">Cancel</string>
    <string name="pref_personalize_sms">pref_personalize_sms</string>
    <string name="pref_personalize_contacts">pref_personalize_contacts</string>
    <string name="pref_personalize_delremote">pref_personalize_delremote</string>
    <string name="pref_delete_dynamic_key">pref_delete_dynamic_key</string>
    <string name="pref_personalize_sources_category_key">pref_personalize_sources_category_key</string>
    <string name="turkish_qwerty_keyboard_types">Turkish Qwerty keyboard types</string>
    <string name="settings_select_input_language">Select input languages</string>
    <string name="settings_smart_typing">Smart typing</string>
    <string name="settings_key_tap_feedback">Key-tap feedback</string>
    <string name="settings_more_settings">More settings</string>
    <string name="settings_keyboard_swipe_radio_none">None</string>
    <string name="settings_key_tap_feedback_sound">Sound</string>
    <string name="settings_key_tap_feedback_vibration">Vibration</string>
    <string name="settings_hold_delay_title">Tap and hold delay</string>
    <string name="shortcut_phrase">My hot keys</string>
    <string name="use_shortcut_phrase">Assign text shortcuts to number keys. This function is only available when using Qwerty keyboards.</string>
</resources>