<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/setting_title" android:key="input_method_settings"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference android:persistent="true" android:entries="@array/input_method_types" android:title="@string/input_method_type" android:key="SETTINGS_DEFAULT_KEYPAD_TYPE" android:widgetLayout="@layout/settings_preference_layout" android:defaultValue="0" android:dialogTitle="@string/input_method_type" android:entryValues="@array/input_method_type_values" />
    <ListPreference android:persistent="true" android:entries="@array/turkish_input_method_types" android:title="@string/turkish_qwerty_keyboard_types" android:key="SETTINGS_TURKISH_KEYBOARD_TYPE" android:widgetLayout="@layout/settings_preference_layout" android:defaultValue="0" android:dialogTitle="@string/turkish_qwerty_keyboard_types" android:entryValues="@array/turkish_input_method_type_values" />
    <Preference android:title="@string/select_language" android:key="select_language_list">
        <intent android:action="com.diotek.ime.implement.setting.AC_LANGUAGES_SETTINGS" />
    </Preference>
    <CheckBoxPreference android:persistent="true" android:title="@string/use_trace" android:key="SETTINGS_DEFAULT_TRACE" android:summary="@string/trace_summary" android:defaultValue="false" />
    <CheckBoxPreference android:persistent="true" android:title="@string/use_keypad_sweeping" android:key="SETTINGS_DEFAULT_KEYPAD_SWEEPING" android:summary="@string/keypad_sweeping_summary" android:defaultValue="true" />
    <CheckBoxPreference android:persistent="true" android:title="@string/use_keypress_haptic" android:key="SETTINGS_DEFAULT_SUPPORT_KEY_VIBRATE" android:defaultValue="true" />
    <CheckBoxPreference android:persistent="true" android:title="@string/use_keypress_sound" android:key="SETTINGS_DEFAULT_SUPPORT_KEY_SOUND" android:defaultValue="true" />
    <PreferenceScreen android:title="@string/s_fuzzy_option_title" android:key="dio_ime_settings_fuzzy">
        <CheckBoxPreference android:persistent="true" android:title="@string/s_zequalzh" android:key="@string/s_zequalzh_key" android:defaultValue="true" />
        <CheckBoxPreference android:persistent="true" android:title="@string/s_cequalch" android:key="@string/s_cequalch_key" android:defaultValue="true" />
        <CheckBoxPreference android:persistent="true" android:title="@string/s_sequalsh" android:key="@string/s_sequalsh_key" android:defaultValue="true" />
        <CheckBoxPreference android:persistent="true" android:title="@string/s_lequaln" android:key="@string/s_lequaln_key" android:defaultValue="true" />
        <CheckBoxPreference android:persistent="true" android:title="@string/s_lequalh" android:key="@string/s_lequalh_key" android:defaultValue="true" />
        <CheckBoxPreference android:persistent="true" android:title="@string/s_fequalh" android:key="@string/s_fequalh_key" android:defaultValue="true" />
        <CheckBoxPreference android:persistent="true" android:title="@string/s_lequalr" android:key="@string/s_lequalr_key" android:defaultValue="true" />
        <CheckBoxPreference android:persistent="true" android:title="@string/s_kequalg" android:key="@string/s_kequalg_key" android:defaultValue="true" />
        <CheckBoxPreference android:persistent="true" android:title="@string/s_anequalang" android:key="@string/s_anequalang_key" android:defaultValue="true" />
        <CheckBoxPreference android:persistent="true" android:title="@string/s_enequaleng" android:key="@string/s_enequaleng_key" android:defaultValue="true" />
        <CheckBoxPreference android:persistent="true" android:title="@string/s_ianequaliang" android:key="@string/s_ianequaliang_key" android:defaultValue="true" />
        <CheckBoxPreference android:persistent="true" android:title="@string/s_inequaling" android:key="@string/s_inequaling_key" android:defaultValue="true" />
        <CheckBoxPreference android:persistent="true" android:title="@string/s_uanequaluang" android:key="@string/s_uanequaluang_key" android:defaultValue="true" />
    </PreferenceScreen>
    <Preference android:title="@string/advanced" android:key="advanced">
        <intent android:action="com.diotek.ime.implement.setting.ADVANCED" />
    </Preference>
    <Preference android:title="@string/tutorial" android:key="tutorial">
        <intent android:action="com.diotek.ime.implement.setting.TUTORIAL" />
    </Preference>
    <com.diotek.ime.implement.setting.ResetSettingsDialogPreference android:title="@string/reset_settings" android:key="reset_settings" android:dialogTitle="@string/reset_dialog_title" android:dialogMessage="@string/reset_dialog_msg" android:positiveButtonText="@string/ok" android:negativeButtonText="@string/cancel" />
</PreferenceScreen>