<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:id="@id/personalizer_fragment" android:title="@string/use_xt9" android:key="test"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:touchtype="http://schemas.android.com/apk/res/com.touchtype">
    <CheckBoxPreference android:persistent="true" android:title="@string/use_live_language" android:key="SETTINGS_DEFAULT_USE_LIVE_LANGUAGE" android:summary="@string/use_live_language_summary" android:defaultValue="true" />
    <CheckBoxPreference android:persistent="true" android:title="@string/use_standard_data" android:key="SETTINGS_USE_STANDARD_DATA" android:summary="@string/use_standard_data_summary" android:defaultValue="false" />
    <PreferenceCategory android:title="@string/personalization_title" android:key="@string/pref_personalize_sources_category_key">
        <com.touchtype.personalizer.PersonalizerPreference android:id="@id/facebook" android:title="@string/personalize_facebook_title" android:key="pref_personalize_facebook" android:summary="@string/personalize_facebook_subtitle" android:dependency="SETTINGS_USE_STANDARD_DATA" style="?android:attr/dialogPreferenceStyle" />
        <com.touchtype.personalizer.PersonalizerPreference android:id="@id/gmail" android:title="@string/personalize_gmail_title" android:key="pref_personalize_gmail" android:summary="@string/personalize_gmail_subtitle" android:dependency="SETTINGS_USE_STANDARD_DATA" style="?android:attr/dialogPreferenceStyle" />
        <com.touchtype.personalizer.PersonalizerPreference android:id="@id/twitter" android:title="@string/personalize_twitter_title" android:key="pref_personalize_twitter" android:summary="@string/personalize_twitter_subtitle" android:dependency="SETTINGS_USE_STANDARD_DATA" style="?android:attr/dialogPreferenceStyle" />
        <com.touchtype.personalizer.PersonalizerPreference android:id="@id/sms" android:title="@string/personalize_messaging_title" android:key="@string/pref_personalize_sms" android:summary="@string/personalize_messaging_subtitle" android:dependency="SETTINGS_USE_STANDARD_DATA" style="?android:attr/preferenceStyle" />
        <com.touchtype.personalizer.PersonalizerPreference android:id="@id/contacts" android:title="@string/personalize_contacts_title" android:key="@string/pref_personalize_contacts" android:summary="@string/personalize_contacts_subtitle" android:dependency="SETTINGS_USE_STANDARD_DATA" style="?android:attr/preferenceStyle" />
        <com.touchtype.personalizer.PersonalizerPreference android:id="@id/delremote" android:title="@string/personalize_delremote_title" android:key="@string/pref_personalize_delremote" android:summary="@string/personalize_delremote_subtitle" android:dependency="SETTINGS_USE_STANDARD_DATA" style="?android:attr/preferenceStyle" />
        <com.touchtype.personalizer.DeleteDynamicLanguageModelDialog android:title="@string/pref_delete_dynamic_title" android:key="@string/pref_delete_dynamic_key" android:summary="@string/pref_delete_dynamic_summary" android:dependency="SETTINGS_USE_STANDARD_DATA" android:dialogMessage="@string/pref_delete_dynamic_dialog_title" android:negativeButtonText="@string/pref_delete_dynamic_dialog_cancel" style="?android:attr/dialogPreferenceStyle" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/privacy_preference_title">
        <PreferenceScreen android:title="@string/privacy_policy_title" android:key="key_privacy_policy_pref" android:summary="@string/privacy_policy">
            <intent android:action="android.intent.action.VIEW" android:data="@string/swiftkey_privacy_url" />
        </PreferenceScreen>
    </PreferenceCategory>
</PreferenceScreen>