<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/setting_title" android:key="input_method_settings"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference android:persistent="true" android:entries="@array/input_method_types" android:title="@string/input_method_type" android:key="SETTINGS_DEFAULT_KEYPAD_TYPE" android:widgetLayout="@layout/settings_preference_layout" android:defaultValue="0" android:dialogTitle="@string/input_method_type" android:entryValues="@array/input_method_type_values" />
    <Preference android:title="@string/select_languages" android:key="select_language_list">
        <intent android:action="com.diotek.ime.implement.setting.AC_LANGUAGES_SETTINGS" />
    </Preference>
    <SwitchPreference android:persistent="true" android:title="@string/use_xt9" android:key="SETTINGS_DEFAULT_PREDICTION_ON" android:defaultValue="true" />
    <CheckBoxPreference android:persistent="true" android:title="@string/use_trace" android:key="SETTINGS_DEFAULT_TRACE" android:summary="@string/trace_summary" android:dependency="SETTINGS_DEFAULT_PREDICTION_ON" android:defaultValue="false" />
    <CheckBoxPreference android:persistent="true" android:title="@string/use_keypad_sweeping" android:key="SETTINGS_DEFAULT_KEYPAD_SWEEPING" android:summary="@string/keypad_sweeping_summary" android:defaultValue="true" />
    <Preference android:title="@string/input_method_type_box_hwr" android:key="SETTINGS_DEFAULT_HWR_ON">
        <intent android:action="com.diotek.ime.implement.setting.HWR_SETTING" />
    </Preference>
    <CheckBoxPreference android:persistent="true" android:title="@string/use_auto_caps" android:key="SETTINGS_DEFAULT_AUTO_CAPS" android:summary="@string/auto_caps_summary" android:defaultValue="true" />
    <CheckBoxPreference android:persistent="true" android:title="@string/use_auto_period" android:key="SETTINGS_DEFAULT_AUTO_PERIOD" android:summary="@string/auto_period_summary" android:defaultValue="true" />
    <CheckBoxPreference android:persistent="true" android:title="@string/use_char_preview" android:key="SETTINGS_DEFAULT_USE_PREVIEW" android:defaultValue="true" />
    <CheckBoxPreference android:persistent="true" android:title="@string/use_keypress_haptic" android:key="SETTINGS_DEFAULT_SUPPORT_KEY_VIBRATE" android:defaultValue="true" />
    <CheckBoxPreference android:persistent="true" android:title="@string/use_keypress_sound" android:key="SETTINGS_DEFAULT_SUPPORT_KEY_SOUND" android:defaultValue="true" />
    <Preference android:title="@string/tutorial" android:key="tutorial">
        <intent android:action="com.diotek.ime.implement.setting.TUTORIAL" />
    </Preference>
    <com.diotek.ime.implement.setting.ResetSettingsDialogPreference android:title="@string/reset_settings" android:key="reset_settings" android:dialogTitle="@string/reset_dialog_title" android:dialogMessage="@string/reset_dialog_msg_xt9_ver9" android:positiveButtonText="@string/ok" android:negativeButtonText="@string/cancel" />
</PreferenceScreen>